# MajorProject_BytePay

./: README.md  main.py  pyproject.toml  requirements.txt
Prototype1/: index.html
templates/: dashboard.html  index.html  metamask.html  order.html  profile.html
templates/simulator/: cart.html  failure.html  index.html  success.html
